# mikkoo

./: .gitignore  .pre-commit-config.yaml  .travis.yml  404.html  LICENSE  README.md  README.rst  example.yaml  index.html  justfile  mikkoo.sql  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  sitemap.xml  test-requirements.txt
.github/workflows/: deploy.yaml  docs.yaml  testing.yaml
ci/: test-before-script.sh  test-script.sh
configuration/: index.html
docs/: configuration.md  history.md  index.md  pgq.md
history/: index.html
mikkoo/: __init__.py  controller.py  mcp.py  state.py  stats.py  statsd.py  worker.py
pgq/: index.html
search/: search_index.json
tests/: test_mcp.py  test_state.py  test_worker.py
