[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mikkoo"
version = "2.2.2"
description = "Mikkoo is a PgQ to RabbitMQ Relay"
readme = "README.md"
requires-python = ">=3.11"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [
    {name = "Gavin M. Roy", email = "gavinmroy@gmail.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Communications",
    "Topic :: Internet",
    "Topic :: Software Development",
    "Typing :: Typed",
]
keywords = ["amqp", "postgres", "postgresql", "rabbitmq"]
dependencies = [
    "arrow",
    "helper>=2.5,<3",
    "pika>=1.3,<2",
    "psutil",
    "psycopg>=3.1,<4",
    "pyyaml",
    "uuid7",
]

[project.optional-dependencies]
sentry = ["sentry-sdk"]
statsd = ["sprockets-statsd"]

[project.scripts]
mikkoo = "mikkoo.controller:main"

[project.urls]
Homepage = "https://github.com/gmr/mikkoo"
Documentation = "https://gmr.github.io/mikkoo/"
"Bug Tracker" = "https://github.com/gmr/mikkoo/issues"

[dependency-groups]
dev = [
    "build",
    "coverage[toml]",
    "pre-commit",
    "ruff",
    "sentry-sdk",
    "sprockets-statsd",
]
docs = [
    "mkdocs>=1.5,<2",
    "mkdocs-material>9.5,<10",
]

[tool.coverage.html]
directory = "build/coverage"

[tool.coverage.report]
show_missing = true

[tool.coverage.run]
branch = true
command_line = "-m unittest discover tests --verbose"
data_file = "build/.coverage"
source = ["mikkoo"]

[tool.coverage.xml]
output = "build/coverage.xml"

[tool.hatch.build.targets.wheel]
include = ["mikkoo"]

[tool.mkdocs]
config-file = "mkdocs.yml"

[tool.ruff]
line-length = 79
target-version = "py311"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = [
    "BLE",      # flake8-blind-except
    "C4",       # flake8-comprehensions
    "C90",      # mccabe
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "G",        # flake8-logging-format
    "I",        # isort
    "N",        # pep8-naming
    "Q",        # flake8-quotes
    "S",        # flake8-bandit
    "ASYNC",    # flake8-async
    "B",        # flake8-bugbear
    "DTZ",      # flake8-datetimez
    "FURB",     # refurb
    "RUF",      # ruff-specific
    "T20",      # flake8-print
    "UP",       # pyupgrade
]
ignore = [
    "E501",     # line too long
    "N818",     # exception class names are not required to end in Error
    "RSE",      # contradicts Python Style Guide
    "S608",     # false positive: SQL uses parameterized queries
    "UP040",    # allow non-pep695-type-alias
]
flake8-quotes = {inline-quotes = "single"}

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S"]
