[metadata]
name = mikkoo
version = attr: mikkoo.__version__
description = Mikkoo is a PgQ to RabbitMQ Relay
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
license = BSD 3-Clause License
license-file = LICENSE
home-page = https://github.com/gmr/mikkoo
project_urls =
    Bug Tracker = https://github.com/gmr/mikkoo/issues
    Documentation = https://mikkoo.readthedocs.io
    Source Code = https://github.com/gmr/mikkoo/
author = Gavin M. Roy
author_email = gavinmroy@gmail.com
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Topic :: Communications
    Topic :: Internet
    Topic :: Software Development
    Typing :: Typed
requires-dist = setuptools
keywords =
    amqp
    rabbitmq

[options]
include_package_data = True
install_requires =
    arrow>=1.2.3,<2
    helper>=2.5.0,<3
    pika>=1.2.0,<2
    psutil>=5.9.1,<6
    psycopg>3,<4
    pyyaml>=5.3.1,<6
    uuid7
packages =
    mikkoo
python_requires = >=3.9
zip_safe = true

[options.entry_points]
console_scripts =
    mikkoo = mikkoo.controller:main

[options.extras_require]
sentry =
    sentry-sdk

statsd =
    sprockets-statsd

testing =
    bandit
    coverage
    flake8
    flake8-comprehensions
    flake8-deprecated
    flake8-import-order
    flake8-print
    flake8-quotes
    flake8-rst-docstrings
    flake8-tuple
    sentry-sdk
    sphinx
    sprockets-statsd
    types-pika
    yapf

[build_sphinx]
all-files = 1

[coverage:run]
branch = True
command_line = -m unittest discover tests --verbose
data_file = build/.coverage

[coverage:report]
show_missing = True
include =
    mikkoo/*
omit =
    tests/*.py

[coverage:html]
directory = build/coverage

[coverage:xml]
output = build/coverage.xml

[flake8]
application-import-names = mikkoo, tests
exclude = bak,build,docs,env,init.d,mikkoo.egg-info,utils
import-order-style = pycharm
rst-directives = deprecated,todo,versionadded
rst-roles = attr,class,const,data,exc,func,meth,mod,obj
